{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 10,
  "lineage": "87181d3a-8dae-ee5f-0383-bd12c3e338f9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-5069b1e584c2948f7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-45e7e0fb7b6d656dd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-5069b1e584c2948f7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-3f8dd462676e0ab18",
            "owner_id": "000000000000",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "client_keep_alive": 3600,
            "desync_mitigation_mode": "defensive",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/py-calc-app-alb/01246bd876e82beb",
            "idle_timeout": 60,
            "internal": false,
            "load_balancer_type": "application",
            "name": "py-calc-app-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-592c347da3393c869"
            ],
            "subnets": [
              "subnet-213b973ec848d35bb",
              "subnet-35907d03a84250fd7",
              "subnet-71c82d9d4ce15b5e9",
              "subnet-8dbb77db4b413a0f3",
              "subnet-9fe1c22714ce74494",
              "subnet-eb41aa99abed807c0"
            ],
            "tags_all": {
              "Managed": "terraform",
              "Project": "py-calc-app"
            },
            "xff_header_processing_mode": "append"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/py-calc-app-tg/664d3feb7bb7edec",
            "arn_suffix": "targetgroup/py-calc-app-tg/664d3feb7bb7edec",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/py-calc-app-tg/664d3feb7bb7edec",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "py-calc-app-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Managed": "terraform",
              "Project": "py-calc-app"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                  }
                ],
                "unhealthy_state_routing": [
                  {
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-5069b1e584c2948f7"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/py-calc-app-tg/664d3feb7bb7edec"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-592c347da3393c869",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-592c347da3393c869",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "py-calc-app-alb-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Managed": "terraform",
              "Project": "py-calc-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-5069b1e584c2948f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "sg-592c347da3393c869",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-95ece951dc1690197",
            "description": "Service security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-95ece951dc1690197",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From ALB",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-592c347da3393c869"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "py-calc-app-svc-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Managed": "terraform",
              "Project": "py-calc-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-5069b1e584c2948f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "sg-95ece951dc1690197",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}